--- a/README
+++ b/README
@@ -1,10 +1,21 @@
+Environment setup
+=================
+
+In the tt directory:
+make init
+
+You also need to have CouchDB up and running in your machine.
+
+To compile the source code of the tt application:
+make compile
+
 
 CouchDB objects
 ===============
 
 scores: nick x scores
-
 matches: winner x looser x figures x gsec
+
 
 CouchDB views:
 ==============
